fix: add margin-right to external links for icons to not overlap with content, change made based on PR review

--- a/docroot/themes/humsci/humsci_basic/src/scss/components/_node--news-item.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/components/_node--news-item.scss
@@ -65,6 +65,7 @@
   @include hb-colorful {
     $hb-color--primary: hb-colorful-variation(primary);
     position: relative;
+    margin-right: hb-calculate-rems(24px);
     display: inline-block;
     border-bottom: 1px solid lighten(hb-colorful-variation(primary), 10%);
 
